demo/blue-green-single/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  marketing
---
apiVersion: v1
kind: Namespace
metadata:
  name:  root-ingressroute
