demo/blue-green-single/02-blue-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue
  namespace: marketing
spec:
  selector:
    app: blue
  ports:
  - name: http
    port: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blue
  namespace: marketing
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - image: hashicorp/http-echo:0.2.3
        name: www
        args:
          - -listen=:80
          - -text=This is the blue version! (marketing.pixelcorp.local/blog)
