demo/blue-green-single/04-www2.ingressroute.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: blog2
  namespace: marketing
spec: 
  routes: 
    - match: /blog
      services: 
        - name: green
          port: 80
